@@ -23,9 +23,6 @@
 #define LIBDIR_AIX_LIBPATH   "@HARDCODE_LIBDIR_AIX_LIBPATH@"
 #define SCOREP_BACKEND_SYS_LIB_DLSEARCH_PATH "@SYS_LIB_DLSEARCH_PATH_SPEC@"
 
-#define HAVE_LINK_FLAG_BSTATIC      @HAVE_LINK_FLAG_BSTATIC@
-#define HAVE_LINK_FLAG_BDYNAMIC     @HAVE_LINK_FLAG_BDYNAMIC@
-
 #define BUILD_SCOREP_PREFIX  "@abs_top_srcdir@/.." 
 #define BUILD_PDT_CONFIG     "@abs_top_srcdir@/../share/SCOREP_Pdt_Instrumentation.conf"
 
